# kino_dynamic_opt

./: .gitignore  .gitignore~  LICENSE  README.md
momentumopt/: CMakeLists.txt  Config.cmake.in  README.md  colcon.pkg  package.xml  setup.py
momentumopt/config/: cfg_biped.yaml  cfg_bolt_back_flip.yaml  cfg_bolt_hoping.yaml  cfg_bolt_jump.yaml  cfg_bolt_running.yaml  cfg_bolt_slow_running.yaml  cfg_demo01_twofeet.yaml  cfg_demo01_walk.yaml  cfg_demo01_walk_short.yaml  cfg_demo01_walk_v2.yaml  cfg_demo02_trot.yaml  cfg_demo02_trot_continous.yaml  cfg_demo02_trot_continous_v2.yaml  cfg_demo03_pace.yaml  cfg_demo04_canter.yaml  cfg_demo05_gallop.yaml  cfg_demo06_rotgallop.yaml  cfg_demo07_twofeet.yaml  cfg_demo08_jump.yaml  cfg_demo09_tuning_gallop.yaml  cfg_demo10_tuning_twofeet.yaml  cfg_demo11_comparison_gallop.yaml  cfg_momSc_demo01.yaml  cfg_momSc_demo03.yaml  cfg_momTr_demo01.yaml  cfg_momTr_demo02.yaml  cfg_momTr_demo03.yaml  cfg_quadruped.yaml  cfg_quadruped_2.yaml  cfg_quadruped_dance_solo12.yaml  cfg_quadruped_fast_long_trot.yaml  cfg_quadruped_fast_trot.yaml  cfg_quadruped_forward_jump.yaml  cfg_quadruped_jump.yaml  cfg_quadruped_jump_on_box.yaml  cfg_quadruped_knee_inversion.yaml  cfg_quadruped_lift_leg.yaml  cfg_quadruped_lift_leg_momentum.yaml  cfg_quadruped_lift_leg_momentum_rotated.yaml  cfg_quadruped_lift_rear.yaml  (+23 more)
momentumopt/config/SAB_Demos/: cfg_quadruped_forward_jump.yaml  cfg_quadruped_forward_jump_box.yaml  cfg_quadruped_jump.yaml  cfg_quadruped_reach.yaml  cfg_quadruped_rearing.yaml  cfg_quadruped_trot.yaml
momentumopt/config/old_demos/: cfg_demo01_twofeet.yaml  cfg_demo01_walk.yaml  cfg_demo01_walk_v2.yaml  cfg_demo07_twofeet.yaml  cfg_demo10_tuning_twofeet.yaml  cfg_momSc_demo01.yaml  cfg_momSc_demo02.yaml  cfg_momTr_demo02.yaml  cfg_quadruped_forward_jump.yaml  cfg_quadruped_jump_on_box.yaml  cfg_quadruped_lift_leg_momentum.yaml  cfg_quadruped_lift_leg_momentum_rotated.yaml  cfg_quadruped_step_on_box.yaml
momentumopt/config/other_demos/: cfg_quadruped_0.yaml  cfg_quadruped_1.yaml  cfg_quadruped_2.yaml
momentumopt/demos/: .plot_traj.py.swp  PyDemoMomentumopt.py  demo_biped_from_python.py  demo_momentumopt.cpp  demo_momentumopt_solo12_jump.py  demo_solo12_jump.py  demo_solo_jump.py  demo_solo_jump_no_lqr.py  demo_tracking_trajectories.py  new_invkin.ipynb  plot_traj.py  solo12_testing.ipynb  traj_reader.ipynb  yaml_rewrite.ipynb  yaml_rewrite_v2.ipynb
momentumopt/demos/deprecated/: crash_motion_planner.py  new_invkin.ipynb  solo12_testing.ipynb  yaml_rewrite.ipynb  yaml_rewrite_v2.ipynb
momentumopt/include/momentumopt/cntopt/: ContactPlanFromFile.hpp  ContactPlanInterface.hpp  ContactState.hpp  TerrainDescription.hpp
momentumopt/include/momentumopt/dynopt/: DynamicsFeedback.hpp  DynamicsOptimizer.hpp  DynamicsState.hpp
momentumopt/include/momentumopt/kinopt/: KinematicsInterface.hpp  KinematicsOptimizer.hpp  KinematicsState.hpp  PyKinematicsInterface.hpp
momentumopt/include/momentumopt/setting/: Definitions.hpp  PlannerParams.hpp  PlannerSetting.hpp
momentumopt/include/momentumopt/utilities/: Clock.hpp  OrientationUtils.hpp  TrajectoryGenerator.hpp
momentumopt/nodes/: demo_py_momentumopt  kino_dyn_planner  kino_dyn_planner_solo  kyno_dyn_planner_solo
momentumopt/python/: dynamic_targets.npz  dynamic_targets_trot.npz  secondOrderIK.ipynb
momentumopt/python/momentumopt/: PinocchioKinematicsInterface.py  PyDemoMomentumopt.py  __init__.py  display.py  helpers.py  kino_dyn_planner.py  kino_dyn_planner_solo.py  kyno_dyn_planner_solo.py  motion_execution.py  motion_planner.py
momentumopt/python/momentumopt/kinoptpy/: __init__.py  create_data_file.py  crocoddyl_inv_kin.py  end_eff_lqr_gain_computation.py  inverse_kinematics.py  lqr_gain_computation.py  lqr_gain_manifold.py  min_jerk_traj.py  momentum_kinematics_optimizer.py  qp.py  second_order_ik.py  utils.py
momentumopt/python/momentumopt/quadruped/: debug.py  (+1 more)
momentumopt/src/momentumexe/: motion_execution.py
momentumopt/src/momentumopt/: PyDemoMomentumopt.py
momentumopt/src/quadruped/: quadruped_wrapper.py
momentumopt/src/urdf/: quadruped.urdf  quadruped.xacro  quadruped_v2.urdf
momentumopt/srcpy/momentumopt/: PyMomentumopt.cpp
momentumopt/tests/: TestMomentumopt.cpp  gtest_main.cpp  test_lqr.py  test_momentumopt.cpp  test_quadruped_problems.cpp  test_quadruped_problems.py  test_robot_jumps.py  utils.py
momentumopt/tests/yaml_config_files/: momentumopt_data.yaml
solver/: CMakeLists.txt  Config.cmake.in  colcon.pkg  package.xml  package.xml_old  readme.md
solver/cmake/: FindGUROBI.cmake  FindIPOPT.cmake  solver-extras-gurobi.cmake  solver-extras-ipopt.cmake  solver-extras.cmake  solver.cmake
solver/srcpy/solver/: PySolver.cpp
solver/tests/: GtestMain.cpp  TestIpopt.cpp  TestLbfgs.cpp  TestRtSolver.cpp  TestSolver.cpp  test_gurobi.cpp  test_solver.cpp
solver/tests/test_problems/: TestProblem00.hpp  TestProblem01.hpp  TestProblem02.hpp  TestProblem03.hpp
solver/tests/yaml_config_files/: test_01.yaml  test_06.yaml  test_07.yaml  test_08.yaml  test_09.yaml  test_11.yaml  test_13.yaml  test_15.yaml  test_16.yaml  test_18.yaml  test_BnB_03.yaml  test_BnB_04.yaml  test_BnB_05.yaml
solver_lqr/: CMakeLists.txt  Config.cmake.in  colcon.pkg  package.xml  readme.md
solver_lqr/config/: default_solver_env.yaml
solver_lqr/include/solver_lqr/: BackwardPass.hpp  FiniteDifferences.hpp  ForwardPass.hpp  LqrInfoPrinter.hpp  OcpDescription.hpp  PyOcpBase.hpp  SolverLqr.hpp  SolverLqrParams.hpp  SolverLqrSetting.hpp
solver_lqr/nodes/: display.py  helpers.py
solver_lqr/scripts/: helpers.py
solver_lqr/src/solver_lqr/: BackwardPass.cpp  FiniteDifferences.cpp  ForwardPass.cpp  LqrInfoPrinter.cpp  OcpDescription.cpp  SolverLqr.cpp  SolverLqrSetting.cpp
solver_lqr/srcpy/solver_lqr/: PyAlgorithmLqr.cpp  PyOcpDescriptionLqr.cpp  PyParamsLqr.cpp  PySettingLqr.cpp  PySolverLqr.cpp
solver_lqr/tests/: GtestMain.cpp  TestSolverLqr.cpp  TestSolverLqrHelpers.cpp
solver_lqr/tests/ocp_problems/: TwoDofArm.hpp
solver_lqr/tests/yaml_config_files/: rscontrol_data.yaml
(+269 files in other folders)
