<?xml version="1.0"?>
<package>
  <name>momentumopt</name>
  <version>1.0.0</version>
  <description>Optimization Routine for Centroidal Momentum Dynamics</description>
  <maintainer email="bponton@tue.mpg.de">Autonomous Motion Lab - MPI-IS</maintainer>
  <license>BSD 3-Clause</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>mpi_cmake_modules</build_depend>
  <build_depend>yaml_cpp_catkin</build_depend>
  <build_depend>pybind11_catkin</build_depend>
  <build_depend>solver</build_depend>
  <build_depend>solver_lqr</build_depend>
  
  <run_depend>mpi_cmake_modules</run_depend>
  <run_depend>yaml_cpp_catkin</run_depend>
  <run_depend>pybind11_catkin</run_depend>
  <run_depend>solver</run_depend>
  <run_depend>solver_lqr</run_depend>
  
  <export>
  </export>
</package>