<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>


<package format="3">

    <name>momentumopt</name>
    <version>1.0.0</version>
    
    <description>
        Optimization Routine for Centroidal Momentum Dynamics
    </description>

    <maintainer email="lrighetti@tuebingen.mpg.de">Ludovic Righetti</maintainer>
    <maintainer email="mnaveau@tuebingen.mpg.de">Maximilien Naveau</maintainer>
    <author email="bponton@tue.mpg.de">Brahayam Ponton</author>

    <license>BSD 3-clause</license>

    <!-- ROS2 build -->
    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>ament_cmake_python</buildtool_depend>

    <!-- CMake module containing helper to find the OS, boost, python, etc. -->
    <buildtool_depend>mpi_cmake_modules</buildtool_depend>
    <buildtool_depend>pybind11_vendor</buildtool_depend>
    <buildtool_depend>pybind11</buildtool_depend>

    <!-- Run time dependencies -->
    <depend>solver</depend>
    <depend>solver_lqr</depend>
    <depend>yaml_utils</depend>
    <depend>Eigen3</depend>
    <depend>Boost</depend>

    <!-- Unit tests -->
    <test_depend>ament_cmake_gtest</test_depend>
    <test_depend>ament_cmake_pytest</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>
