<?xml version="1.0"?>
<package>
  <name>solver</name>
  <version>1.0.0</version>
  <description>Optimization Routine</description>
  <maintainer email="bponton@tue.mpg.de"></maintainer>
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend> mpi_cmake_modules </build_depend>
  <run_depend>   mpi_cmake_modules </run_depend>
    
  <export>
  </export>
</package>
